# Fenrir

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  build.gradle  build.sh  launch.json  tasks.json
.github/workflows/: build.yml
core/config/: config.json  map_config.json
core/src/com/graphical/fenrir/: DefaultScreen.java  Fenrir.java
core/src/fenrir/config/: Constants.java  MainMenu.java
core/src/fenrir/economy/: EconEntity.java
core/src/fenrir/enviroment/: EnviromentFace.java  EnviromentMap.java  EnviromentRegion.java
core/src/fenrir/graphics/: DefaultScreen.java  Fenrir.java
core/src/fenrir/map/: GameMap.java  Map ideas   Map.java  MapConfig.java  MapConstructor.java  MapConstructorDemo.java  MapFace.java  MapTypes.java  ProceduralMap.java  Province.java
core/src/fenrir/political/: PoliticalEntity.java
core/src/fenrir/strategic/: LandDivision.java  StratEntity.java
core/src/fenrir/util/: BoundingBox.java  Edge.java  Face.java  Graph.java  Parabola.java  Point.java  Point2D.java  Point3D.java  Triangle.java  Vector.java  Vornoi.java
core/src/fenrir/util/Voronoi/: BowyerWatson.java  Voronoi.java  VoronoiDelauney.java
core/src/fenrir/util/vornoi/: BowyerWatson.java  Math.java  Vornoi.java  VornoiDelauney.java
core/src/fenrir/util/vornoi/beachline/: BeachNode.java  Beachline.java  InnerBeachNode.java  InsertionResult.java  LeafBeachNode.java
core/src/fenrir/util/vornoi/event/: Event.java  SiteEvent.java  VertexEvent.java
core/src/fenrir/util/vornoi/graph/: BisectorMap.java  Vertex.java  VornoiEdge.java  VornoiGraph.java
core/src/fenrir/views/: Constants.java  MainMenu.java
desktop/: build.gradle
desktop/src/com/graphical/fenrir/: DesktopLauncher.java
docs/: ARCHITECTURE.md  SETUP.md
godot_project/: fenrir.gdextension  fenrir.gdextension.uid  main.gd  main.gd.uid  main.tscn  project.godot
llm-system-prompts/: README.md  bash-tool.md  edit-tool-instructions.md  environment-info.md  exit-plan-mode-instructions.md  memory-file-update-instructions.md  multi-edit-tool-instructions.md  read-tool-instructions.md  restrictions.md  sandbox-mode-instructions.md  search-tools.md  system-prompt.md  task-agent-tool-instructions.md  todo-write-tool.md  tone-and-style.md  tool-usage.md  version-control-operations.md  webfetch-tool-instructions.md  websearch-tool-instructions.md  write-tool-instructions.md
schemas/: world.fbs
src/: globe_viewer.cc  main.cc
src/engine/: components.hh  simulation.cc  simulation.hh  systems.cc  systems.hh
src/godot/: game_node.cc  game_node.hh  register_types.cc
src/state/applicationState/: application_state_manager.hh
src/state/worldState/: geographic_grouper.hh  worldManager.cc  worldManager.hh  world_manager.cc  world_manager.hh
src/ui/: input_handler.cc  input_handler.hh  renderer.cc  renderer.hh  ui_overlay.cc  ui_overlay.hh
src/ui/mapMode/: IMapModeStrategy.hh  MapModeRegistry.cc  MapModeRegistry.hh  MapModeSelector.cc  MapModeSelector.hh  map_mode_registry.cc  map_mode_registry.hh  map_mode_selector.cc  map_mode_selector.hh  map_mode_strategy_interface.hh
src/ui/mapMode/strategies/: PoliticalMode.cc  PoliticalMode.hh  ProvinceDebugMode.cc  ProvinceDebugMode.hh  political_mode.cc  political_mode.hh  province_debug_mode.cc  province_debug_mode.hh
src/util/: constants.hh
src/util/algorithims/: bfs.hh
src/util/data_stuctures/: RingBuffer.hh  SingleConsumerMultipleProducerQueue.hh
src/util/generics/: abstractConfiguration.hh  abstractResource.hh  abstractService.hh
src/util/interfaces/: configuration_interface.hh  pipeline_interface.hh  resource_interface.hh
src/util/logger/: logger.hh
src/util/patterns/: Singleton.hh
src/world/: coordinates.hh  globe.hh  globe_generator.cc  globe_generator.hh  province_data.hh  transforms.hh
tests/: test_coordinates.cc  test_framework.hh  test_globe_generation.cc  test_main.cc  test_simulation.cc
